--- a/index.html
+++ b/index.html
@@ -12,50 +12,48 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
         crossorigin="anonymous">
 
-    <!-- Style links -->
+    <!-- style links -->
     <link rel="stylesheet" href="style/styles.css">
     <link rel="stylesheet" href="style/media.css">
     <link rel="stylesheet" href="style/normailze.css">
 </head>
 
 <body>
+    <a href="#maincontent" class="skip-link">Skip to main content.</a>
 
-    <!-- Header HTML-->
+    <!-- header HTML-->
     <header class="wrapper clearfix">
         <div class="wrapper clearfix">
             <nav>
+                <i class="fas fa-bars mobile"></i>
                 <ul class="clearfix">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
             <h1>
                 Animal Refuge
             </h1>
-            <nav class="mobile">
-                <i class="fas fa-bars"></i>
-            </nav></nav>
         </div>
         <div class="social">
             <ul>
-                <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href=""><i class="fab fa-snapchat-ghost"></i></a></li>
-                <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="#"><i class="fab fa-snapchat-ghost"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
             </ul>
         </div>
     </header>
 
-    <!-- Main HTML -->
-
-    <main>
-        <!-- Section 1 -->
+    <!-- main HTML -->
+    <main id="maincontent">
+        <!-- section 1 | story -->
         <section class="story">
             <div class="wrapper clearfix">
                 <div class="imageHolder">
-                    <img src="images/catImage.jpg" alt="Suzie the cat laying on a couch looking at camera.">
+                    <img src="images/catImage2x.jpg" alt="Suzie the cat laying on a couch looking at camera.">
                 </div>
                 <div class="textBox">
                     <h2>Suzie's Story</h2>
@@ -70,47 +68,47 @@
                 </div>
             </div>
         </section>
-        <!-- Section 2 -->
+        <!-- section 2 | gallery -->
         <section class="gallery">
             <div class="wrapper ">
                 <h2>Some of our friends</h2>
                 <div class="gallery clearfix">
-                    <img src="images/lizzardImage.jpg" alt="A lizzard on a branch.">
-                    <img src="images/sheepImage.jpg" alt="A sheep in a field.">
-                    <img src="images/parrotImage.jpg" alt="A parrot on a branch eating food.">
+                    <img src="images/lizzardImage2x.jpg" alt="A lizzard on a branch.">
+                    <img src="images/sheepImage2x.jpg" alt="A sheep in a field.">
+                    <img src="images/parrotImage2x.jpg" alt="A parrot on a branch eating food.">
                 </div>
             </div>
         </section>
-        <!-- Section 3 -->
+        <!-- section 3 | links -->
         <section class="links">
             <div class="wrapper clearfix">
                 <div class="icon">
-                    <a href="">
+                    <a href="#">
                         <i class="fas fa-paw"></i>
                         <h2>Animal spotlight</h2>
                     </a>
                 </div>
                 <div class="icon">
-                    <a href="">
+                    <a href="#">
                         <i class="fas fa-calendar-check"></i>
                         <h2>Events</h2>
                     </a>
                 </div>
                 <div class="icon">
-                    <a href="">
+                    <a href="#">
                         <i class="fas fa-shopping-bag"></i>
                         <h2>Merch</h2>
                     </a>
                 </div>
             </div>
         </section>
-        <!-- Section 4 -->
+        <!-- section 4 | articles -->
         <section class="articles">
             <div class="articleTop clearfix">
                 <div class="imageHolder rightImage">
                     <div class="zebraImage"></div>
                 </div>
-                <img src="images/zebras.jpg" class="imageCollapse" alt="Zebras in a filed.">
+                <img src="images/zebras@2x.jpg" class="imageCollapse" alt="Zebras in a filed.">
                 <article>
                     <div class="textBox">
                         <h2>Fascinating facts about Zebras</h2>
@@ -126,7 +124,7 @@
                 <div class="imageHolder">
                     <div class="catImage leftImage"></div>
                 </div>
-                <img src="images/HumansAnimals.jpg" class="imageCollapse" alt="A human hand and a kitten">
+                <img src="images/humansAnimals@2x.jpg" class="imageCollapse" alt="A human hand and a kitten.">
                 <article>
                     <div class="textBox">
                         <h2>The bond between animals and humans</h2>
@@ -140,7 +138,7 @@
         </section>
     </main>
 
-    <!-- Footer HTML -->
+    <!-- footer HTML -->
     <footer>
         <div class="wrapper clearfix">
             <ul class="clearfix">
