css clean up, favicon added

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
     <!-- style links -->
     <link rel="stylesheet" href="style/styles.css">
-    <link rel="stylesheet" href="style/media.css">
-    <link rel="stylesheet" href="style/normailze.css">
+
+    <!-- favicon link -->
+    <link type="image/png" href="images/favicon.png" rel="icon">
+
 </head>
 
 <body>
